# SeMoLi

./: .gitmodules  CMakeLists.txt  README.md  amodalize.py  download_av2.sh  environment.yml  evaluate.py  get_filtered_gt.py  sample_frames_for_vis.py  setup.sh  setup_conda.sh  train.py  update_cmake.sh
3DOpenWorldMOT/: .gitignore  collapse.py  cuboid.py  evaluate.py  generate_gt_bin_for_training.py  get_filtered_gt.py  get_num_interior.py  just_eval.py  just_eval.slurm  just_eval_detection.py  sample_frames_for_vis.py  start_hypersearch_newdata.sh  track.py  track_dbscan.slurm  track_dbscan_intersection.slurm  track_simplegraph.slurm  track_spectral.slurm  train_gnn.slurm  train_gnn_local.sh  train_gnn_local_workspace.sh  train_gnn_waymo.slurm  trainer.py
3DOpenWorldMOT/conf/: conf.yaml
3DOpenWorldMOT/data_utils/: DistributedSeqSampler.py  DistributedTestSampler.py  PointCloudDataset.py  S3DISDataLoader.py  SeqDataset.py  TrackingDataset.py  TrajectoryDataset.py  TrajectoryDatasetOrig.py  TrajectoryDatasetResample.py  __init__.py  base_dataset.py  helper_tool.py  point_cloud_handling.py  prepare_kitti.py  semanticKitti.py  splits.py
3DOpenWorldMOT/evaluation/: eval_detection.py
3DOpenWorldMOT/models/: DBSCAN.py  DBSCAN_Intersection.py  GNN.py  GNN_wo_lin.py  OracleTracker.py  SimpleGraph.py  SimpleTracker.py  SpectralClustering.py  __init__.py  (+12 more)
PseudoDetection3D/: amodalizer.py  color_coded_bounding_boxes.py  run.sh  trainer.py
SeMoLi/: trainer.py
tools/: amodalize.py  evaluate.py  get_filtered_gt.py  get_point_gt.py  sample_frames_for_vis.py  train.py
(+172 files in other folders)
